@@ -49,3 +49,9 @@ rc_template = "/dgl-default-rcfile"
 
 passwd = "/dgl-login"
 lockfile = "/dgl-lock"
+
+# From inside the jail, the path to the savefile. %u is replaced by the
+# decimal representation of shed_uid, %n is replaced by the player's
+# user name. Before starting the game, this file is copied to its name
+# with ".bak" appended. Set to an empty string to disable this copying.
+savefilefmt = "/var/games/nethack/save/%u%n.gz"
